Import of ARISTOTLE/Parse-MIME-1.001 from CPAN.
gitpan-cpan-distribution: Parse-MIME
gitpan-cpan-version:      1.001
gitpan-cpan-path:         ARISTOTLE/Parse-MIME-1.001.tar.gz
gitpan-cpan-author:       ARISTOTLE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,17 +1,11 @@
-=head1 Revision history for Parse-MIME
+Revision history for Parse-MIME
 
-=head2 1.000 (Fri Aug  3 20:12:25 2012)
+1.001 Thu 10 July 2014
+	- Bump Dist::Zilla version and re-release to fix deps.
+	  No code changes. (Spotted by Olaf Alders.)
 
-=over 4
+1.000 Fri 03 Aug 2012
+	- Initial CPAN release.
 
-=item * Initial release.
-
-=head2 0.001 (Sun Dec 21 06:21:13 2008)
-
-=over 4
-
-=item * Initial release.
-
-=back
-
-=for vim vi:tw=72:ft=pod
+0.001 Sun 21 Dec 2008
+	- Initial release.
