--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Parse-MIME
 
-1.001 Thu 10 July 2014
+1.002 Mon 05 Jan 2014
+	- No functional changes.
+	- Specified 5.6 minimum Perl requirement.
+	- Cleaned up test suite.
+
+1.001 Thu 10 Jul 2014
 	- Bump Dist::Zilla version and re-release to fix deps.
 	  No code changes. (Spotted by Olaf Alders.)
 
